[gd_scene load_steps=5 format=2]

[ext_resource path="res://scn/workpiece/Viereck done.png" type="Texture" id=1]
[ext_resource path="res://scn/workpiece/Viereck NOT done.png" type="Texture" id=2]
[ext_resource path="res://scn/workpiece/viereck.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 22.0227

[node name="viereck" type="Node2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ViereckNotDone" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ViereckDone" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
